ajsute na rota raiz para retornar o status
